# ProTankiProxy

./: .gitignore  README.md  scripts._with_var_else.py  settings.json  version_info.txt
ProTankiProxyPatcher/: AGENTS.md  README.md  build_config.json  main.py  version_info.txt
ProTankiProxyPatcher/cpp/: CMakeLists.txt  README.md  build_client.ps1
ProTankiProxyPatcher/cpp/resources/: app.manifest
ProTankiProxyPatcher/cpp/src/: app_config.h  http_server.cpp  http_server.h  main.cpp  resource.h  resources.rc  system_utils.cpp  system_utils.h
ProTankiProxyPatcher/python/: ProTankiProxy.spec  README.md  build_exe.ps1  main.py  prepare_release_assets.py
artifacts/reports/: anti_cheat_auto_round_20260404_181055.json  anti_cheat_auto_round_20260404_181055.md  anti_cheat_auto_round_20260404_181055_dedup.csv  (+7 more)
docs/: 00_current_findings.md  01_client_server_interaction.md  02_login_battle_economy_deep_dive.md  04_runtime_bonus_capture_20260404.md  05_xray_texture_candidates.md  06_xray_transparency_implementation.md  07_freecam_mode.md  08_cdn_http_proxy_routing.md  09_autobattle_handoff_20260508.md  10_autobattle_followup_handoff_20260508.md  11_autobattle_fire_shot_path_handoff_20260508.md  12_autobattle_movement_control_handoff_20260508.md  AGENT_HANDOFF.md  KNOWN_FACTS.json
scripts/: bonus_compromise_test_runner.py  capture_with_pktmon.ps1  clean_cache.ps1  collect_runtime_connections.ps1  extract_packet_map.py  fetch_and_decompile_chain.ps1  protanki_packet_watch.py  remove_loopback_aliases.ps1  run_bonus_validation_session.ps1  swf_quick_audit.py
(+4465 files in other folders)
